--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -270,7 +270,7 @@
                                 <li>Customer Data Management</li>
                                 <li>Market Segmentation</li>
                                 <li>Machine Learning & AI</li>
-                                <li>Experience Evaulation</li>
+                                <li>Experience Evaluation</li>
                             </ul>
                         </div>
                     </div>
@@ -383,7 +383,7 @@
                                     <li>Customer Data Management</li>
                                     <li>Market Segmentation</li>
                                     <li>Machine Learning & AI</li>
-                                    <li>Experience Evaulation</li>
+                                    <li>Experience Evaluation</li>
                                 </ul>
                             </div>
                         </li>
