--- a/Sparkt.WebApp/Views/work/HSPUBHMedia.cshtml
+++ b/Sparkt.WebApp/Views/work/HSPUBHMedia.cshtml
@@ -33,7 +33,7 @@
             <div class="assets-carousel fixed " style="background-image: url(../Content/work/images/star-bg.jpg);">
                 <div class="slider">
 
-                    <div>
+                    @*<div>
                         <div class="creative-assets red-base-bg">
                             <div class="container">
                                 <div class="assets-title">
@@ -79,7 +79,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>*@
 
                     <div>
                         <div class="creative-assets hotstar-bg">
@@ -124,15 +124,14 @@
                         </div>
                     </div>
 
-                    <div>
+                    @*<div>
                         <div class="creative-assets">
                             <div class="container">
                                 <div class="assets-title">
                                     <h3>A series of films with Journalist Khoji interviewing <br>Chaitu Lal in the kitsch Indian Breaking News style</h3>
                                 </div>
                                 <div class="sparkt-carousel">
-                                    <div class="mobile-wrapp">
-                                        <!-- <span class="chaitu-elem elem-7" ><img src="images/chaitulala-elem-7.png" alt=""/></span>-->
+                                    <div class="mobile-wrapp">                                     
 
                                         <div class="video-slider">
                                             <div class="video-item">
@@ -206,7 +205,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>*@
 
                 </div>
             </div>
@@ -227,7 +226,7 @@
                         <div class="result-info "> <span class="result-from">IMPRESSIONS</span> <span class="result-points">27.8</span> <span class="result">MILLION</span> </div>
                     </li>
                     <li class="col-3 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">View Rate</span> <span class="result-points">19.8#</span> <span class="result"></span> </div>
+                        <div class="result-info "> <span class="result-from">View Rate</span> <span class="result-points">19.8%</span> <span class="result"></span> </div>
                     </li>
 
                 </ul>
@@ -237,7 +236,7 @@
             <div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>Sparkt helped set context and drive intrigue for this political satire exploring an insight that is truest to India as a politically passionate yet easily misled nation - #KyaUlluBanaya. This campaign made waves across demographics rightly capturing the sentiment of the the common mass - paving way for a whole lot of digital conversations. The communication was further reinforced with thematic short-format content bringing alive the white lies of the lead protagonist. With Aaj ki Adalat, Sparkt produced a differentiated branded content piece that was released on Hotstar and remains a benchmark in parallel storytelling beyond on-air content. </h3>
-                    <span class="quotes-writer">Digital Marketing Head Star HGEC (STAR Plus & STAR Bharat)</span>
+                    <span class="quotes-writer">- Aijaz Nakhuda, Digital Marketing Head Star HGEC (STAR Plus & STAR Bharat)</span>
                 </div>
             </div>
         </div>
