--- a/Sparkt.WebApp/Views/work/Ikyawann.cshtml
+++ b/Sparkt.WebApp/Views/work/Ikyawann.cshtml
@@ -22,14 +22,14 @@
                 <span>Not Shaadi Material</span>
             </div>           
         </div>
-        @Html.Partial("_WorkMenu");
+       
         <div class="awards-wrap">
             <ul>
                 <li class="tooltip" title="DIGIXX: Best Use of TV Show Promotion - Gold"><img src="~/Content/work/images/awards/digx-gold.png" class="responsive-img" alt="" /> </li>
                 <li class="tooltip" title="CIDCA    : Viral Marketing Campaign - Bronze"><img src="~/Content/work/images/awards/cidca-2018-bronze.png" class="responsive-img" alt="" /> </li>
             </ul>
         </div>
-
+        @Html.Partial("_WorkMenu");
       
     </div>
     <div class="section">
@@ -143,7 +143,7 @@
                         <div class="result-info "> <span class="result-from">BUSINESS IMPACT</span> <span class="result-points">22%</span> <span class="small">INCREASED REACH ON THE 8:30 PM SLOT (WEEKDAYS) FOR STAR PLUS</span> </div>
                     </li>
                     <li class="col-3 hvr-float-shadow">
-                        <div class="result-info "> <span class="result-from">TWITTER TREND</span> <span class="result-points">13 hrs.</span> <span class="small">#NotShaadiMaterial trending duration on launch day</span> </div>
+                        <div class="result-info "> <span class="result-from">TWITTER TREND</span> <span class="result-points">13 hrs</span> <span class="small">#NotShaadiMaterial trending duration on launch day</span> </div>
                     </li>
                     <li class="col-3 hvr-float-shadow">
                         <div class="result-info "> <span class="result-from">SENTIMENT</span> <span class="result-points">99%</span> <span class="small">POSITIVE SENTIMENT FOR THE SHOW</span> </div>
