--- a/Sparkt.WebApp/Views/work/IndiaRF.cshtml
+++ b/Sparkt.WebApp/Views/work/IndiaRF.cshtml
@@ -79,14 +79,14 @@
            <h2>Results</h2>
          </div>-->
 
-        <div class="container">
+        @*<div class="container">
             <div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>Sparkt's approach is very similar to ours. They strive to define the larger problem statement and then provide a solution that is the best fitment to the brand. Sparkt gives a feeling that they are part of the same team. Most importantly they understand the business aspect really well and that understanding reflects in the delivery.</h3>
                     <span class="quotes-writer">Mayank Jain - Head of Sales & Marketing - Piramal Housing Finance Ltd.</span>
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </main>
 
