--- a/Sparkt.WebApp/Views/work/JungleBook.cshtml
+++ b/Sparkt.WebApp/Views/work/JungleBook.cshtml
@@ -45,13 +45,13 @@
                                     <div class="three-img-carousel">
                                         <div><img src="~/Content/work/images/mowgli-creative.gif" alt="" /></div>
                                         <div><img src="~/Content/work/images/mowgli-creative2.gif" alt="" /></div>
-                                        <div>
+                                        @*<div>
                                             <div class="video-item">
                                                 <video poster="http://img.youtube.com/vi/WBuXXoFeJIs/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                                     <source src="https://youtu.be/WBuXXoFeJIs" type="video/youtube" />
                                                 </video>
                                             </div>
-                                        </div>
+                                        </div>*@
                                     </div>
 
                                 </div>
