--- a/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
@@ -21,10 +21,13 @@
                 <div class="clear"></div>
                 <span>Conversational interface for enhanced experience</span>
             </div>           
+        </div>      
+        <div class="awards-wrap">
+            <ul>
+                <li class="tooltip" title="CIDCA: Mobile - SMS"><img src="~/Content/work/images/awards/cidca-2018-gold.png" class="responsive-img" alt="" /> </li>               
+            </ul>
         </div>
         @Html.Partial("_WorkMenu");
-
-       
     </div>
     <div class="section ">
         <div class="head-title floated ">
@@ -101,7 +104,7 @@
             <h2>Results</h2>
           </div>-->
 
-        <div class="container">
+        @*<div class="container">
             <div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>
@@ -111,7 +114,7 @@
                     <span class="quotes-writer"></span>
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </main>
 
