--- a/Sparkt.WebApp/Views/work/NachBaliye8.cshtml
+++ b/Sparkt.WebApp/Views/work/NachBaliye8.cshtml
@@ -40,7 +40,7 @@
                             <div class="container">
                                 <div class="assets-title">
                                     <h4>
-                                        DIGITAL EXCLUSIVE CONTENT AND INNOVATIONS IN FORMAT
+                                        DIGITAL EXCLUSIVE CONTENT AND FORMAT INNOVATIONS
                                         TO KEEP THE AUDIENCE HOOKED THROUGH THE SEASON
                                     </h4>
                                 </div>
@@ -116,9 +116,9 @@
                                 <div class="project fadeIn" data-t-show="1">
                                     <div class="project__card">
                                         <a class="project__image"><img src="~/Content/work/images/nach-baliye-8-creative-approch.png" alt=""></a>
-                                        <div class="project__detail">
+                                        @*<div class="project__detail">
                                             <h2 class="project__title"><a href="#">CREATIVE APPROACH</a></h2>
-                                        </div>
+                                        </div>*@
                                     </div>
                                 </div>
                             </div>
@@ -155,7 +155,7 @@
             <div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>Nach Baliye as a property is very special for Star Plus. It’s return with an 8th season posed the challenge of engaging a young audience that is spoilt for choice when it comes to content and information. Sparkt helped bring alive Nach Baliye and it’s celebrity participants by unlocking the potential of video with live & innovative storytelling.</h3>
-                    <span class="quotes-writer">Digital Marketing Head Star HGEC (STAR Plus & STAR Bharat)</span>
+                    <span class="quotes-writer">- Aijaz Nakhuda, Digital Marketing Head Star HGEC (STAR Plus & STAR Bharat)</span>
                 </div>
             </div>
         </div>
