--- a/Sparkt.WebApp/Views/work/TextMoji.cshtml
+++ b/Sparkt.WebApp/Views/work/TextMoji.cshtml
@@ -24,6 +24,11 @@
         </div>
 
 
+        <div class="awards-wrap">
+            <ul>
+                <li class="tooltip" title="CIDCA: Mobile - SMS"><img src="~/Content/work/images/awards/cidca-2018-gold.png" class="responsive-img" alt="" /> </li>
+            </ul>
+        </div>
         @Html.Partial("_WorkMenu");
     </div>
     <div class="section ">
@@ -84,12 +89,12 @@
             </div>
         </div>
         <div class="container">
-            <div class="quotes-wrapp">
+            @*<div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>Coming Soon </h3>
                     <span class="quotes-writer"> </span>
                 </div>
-            </div>
+            </div>*@
         </div>
     </div>
 </main>
