--- a/Sparkt.WebApp/Views/work/Kullfi.cshtml
+++ b/Sparkt.WebApp/Views/work/Kullfi.cshtml
@@ -202,12 +202,12 @@
             </div>
         </div>
         <div class="container">
-            <div class="quotes-wrapp">
+            @*<div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>Coming Soon</h3>
                     <span class="quotes-writer"></span>
                 </div>
-            </div>
+            </div>*@
         </div>
     </div>
 </main>
