--- a/Sparkt.WebApp/Views/work/OnePlus.cshtml
+++ b/Sparkt.WebApp/Views/work/OnePlus.cshtml
@@ -43,7 +43,7 @@
                                 </div>
                                 <div class="mobile-style-carousel">
                                     <div class="mobile-wrapp">
-                                        <img src="images/mobile-slider.png" alt="" class="mobile-vector" />
+                                        <img src="~/Content/work/images/mobile-slider.png" alt="" class="mobile-vector" />
                                         <div class="video-slider">
                                             <div class="video-item">
                                                 <video poster="http://i3.ytimg.com/vi/GSj4KLwj8J4/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
@@ -94,7 +94,7 @@
     </div>
     <div class="section white-bg">
         <div class="head-title floated text-color-dark">
-            <i class="title-icon"><img src="images/title-icon.png" alt="" /></i>
+            <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
             <h2>Results</h2>
         </div>
         <div class="container">
@@ -106,6 +106,14 @@
 
                 </ul>
             </div>
+        </div>
+        <div class="container">
+            @*<div class="quotes-wrapp">
+                <div class="quotes">
+                    <h3></h3>
+                    <span class="quotes-writer"></span>
+                </div>
+            </div>*@
         </div>
     </div>
 </main>
