--- a/Sparkt.WebApp/Views/work/PiramalCapital.cshtml
+++ b/Sparkt.WebApp/Views/work/PiramalCapital.cshtml
@@ -78,13 +78,13 @@
            <h2>Results</h2>
          </div>-->
 
-        <div class="container">
+        @*<div class="container">
             <div class="quotes-wrapp">
                 <div class="quotes">
                     <h3>Coming Soon</h3>
                     <span class="quotes-writer"></span>
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </main>
