--- a/Sparkt.WebApp/Views/work/IshqBaaaz.cshtml
+++ b/Sparkt.WebApp/Views/work/IshqBaaaz.cshtml
@@ -43,7 +43,7 @@
                                 </div>
                                 <div class="mobile-style-carousel ">
                                     <div class="mobile-wrapp">
-                                        <img src="images/mobile-slider.png" alt="" class="mobile-vector" />
+                                        <img src="~/Content/work/images/mobile-slider.png" alt="" class="mobile-vector" />
                                         <div class="video-slider">
                                             <div class="video-item">
                                                 <video poster="http://i3.ytimg.com/vi/f5DNxxlSOs8/mqdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
