--- a/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
@@ -49,12 +49,12 @@
         </div>
         <div class="main-menu">
             <ul class="scroll-content">
-                <li><a href="@Url.Action("Index","Home")"><span>Home</span></a> </li>
-                <li><a href="@Url.Action("Index", "Home")?section=We"><span>We</span></a> </li>
-                <li><a href="@Url.Action("Index", "Home")?section=clients"><span>Clients</span></a> </li>
-                <li><a href="@Url.Action("Index", "Home")?section=Work"><span>Work</span></a> </li>
-                <li><a href="@Url.Action("Index", "Home")?section=SparktLive"><span>Sparkt Live</span></a> </li>
-                <li><a href="@Url.Action("Index", "Home")?section=Contact"><span>Get In Touch</span></a> </li>
+                <li><a href="/"><span>Home</span></a> </li>
+                <li><a href="/#we"><span>We</span></a> </li>
+                <li><a href="/#clients"><span>Clients</span></a> </li>
+                <li><a href="/#work"><span>Work</span></a> </li>
+                <li><a href="/#sparktlive"><span>Sparkt Live</span></a> </li>
+                <li><a href="/#contact"><span>Get In Touch</span></a> </li>
             </ul>
         </div>
     </header>
