--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -895,47 +895,11 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="@Url.Action("NayiSoch","work")">
-                                        <img src="~/Content/work/images/thums/nayosoch-thum.jpg" alt="">
+                                    <a href="@Url.Action("HSPubh","work")">
+                                        <img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="">
                                         <div class="caption">
-                                            <h4>Nayi Soch </h4>
-                                            <p>Wear your Mother's name with pride. #NayiSoch</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="@Url.Action("MahindraTah","work")">
-                                        <img src="~/Content/work/images/thums/tah-thum.jpg" alt="">
-                                        <div class="caption">
-                                            <h4>Kar Bachat Yojana </h4>
-                                            <p>Igniting a national debate on ‘Taxes Acche Hain’ ahead of Budget 2017  </p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="@Url.Action("MadeByMom","work")">
-                                        <img src="~/Content/work/images/thums/mouthers-day-thum.jpg" alt="">
-                                        <div class="caption">
-                                            <h4>Made By Mom</h4>
-                                            <p>Igniting a Nayi Soch on Mother’s Day</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="@Url.Action("WomensDay","work")">
-                                        <img src="~/Content/work/images/thums/womens-day-thum.jpg" alt="">
-                                        <div class="caption">
-                                            <h4>Women’s Day </h4>
-                                            <p>Igniting a Nayi Soch to break gender stereotypes</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="@Url.Action("MahindraUnnati","work")">
-                                        <img src="~/Content/work/images/thums/mahindra-unnati-thum.jpg" alt="">
-                                        <div class="caption">
-                                            <h4>UNNATI EMERGING BUSINESS YOJANA</h4>
-                                            <p>Samay se Aagey</p>
+                                            <h4> Har Shaakh Pe Ullu Baithaa Hai</h4>
+                                            <p>Kya Ullu Banaya!</p>
                                         </div>
                                     </a>
                                 </li>
@@ -949,6 +913,51 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a href="@Url.Action("MahindraTah","work")">
+                                        <img src="~/Content/work/images/thums/tah-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Kar Bachat Yojana </h4>
+                                            <p>Igniting a national debate on ‘Taxes Acche Hain’ ahead of Budget 2017  </p>
+                                        </div>
+                                    </a>
+                                </li> 
+                                <li>
+                                    <a href="@Url.Action("NayiSoch","work")">
+                                        <img src="~/Content/work/images/thums/nayosoch-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Nayi Soch </h4>
+                                            <p>Wear your Mother's name with pride. #NayiSoch</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("WomensDay","work")">
+                                        <img src="~/Content/work/images/thums/womens-day-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Women’s Day </h4>
+                                            <p>Igniting a Nayi Soch to break gender stereotypes</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("MadeByMom","work")">
+                                        <img src="~/Content/work/images/thums/mouthers-day-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Made By Mom</h4>
+                                            <p>Igniting a Nayi Soch on Mother’s Day</p>
+                                        </div>
+                                    </a>
+                                </li>                                                                                            
+                                <li>
+                                    <a href="@Url.Action("MahindraUnnati","work")">
+                                        <img src="~/Content/work/images/thums/mahindra-unnati-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>UNNATI EMERGING BUSINESS YOJANA</h4>
+                                            <p>Samay se Aagey</p>
+                                        </div>
+                                    </a>
+                                </li>                               
+                                <li>
                                     <a href="@Url.Action("MahindraNfoLaunches","work")">
                                         <img src="~/Content/work/images/thums/mmf-info-thum.jpg" alt="">
                                         <div class="caption">
@@ -956,36 +965,45 @@
                                             <p>Ek Nayi Soch. Ek Nayi Raah.</p>
                                         </div>
                                     </a>
-                                </li>
-                                <li>
-                                    <a href="@Url.Action("HSPubh","work")">
-                                        <img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="">
-                                        <div class="caption">
-                                            <h4> Har Shaakh Pe Ullu Baithaa Hai</h4>
-                                            <p>Kya Ullu Banaya!</p>
-                                        </div>
-                                    </a>
-                                </li>
+                                </li>                            
 
                             </ul>
                         </div>
                         <div class="resp-tab-content" id="Innovations">
                             <ul>
                                 <li>
+                                    <a href="@Url.Action("TedGoogleCards","work")">
+                                        <img src="~/Content/work/images/thums/ted-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>TED GOOGLE CARDS</h4>
+                                            <p>Nayi Soch</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("TextMoji","work")">
+                                        <img src="~/Content/work/images/thums/textmoji-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>MMF Text Moji</h4>
+                                            <p>Ek Nayi Soch. Ek Nayi Raah.</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("HSPUBHMedia","work")">
+                                        <img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Har Shaakh Pe Ullu Baithaa Hai</h4>
+                                            <p>Kya Ullu Banaya!</p>
+                                        </div>
+                                    </a>
+                                </li>                               
+                                <li>
                                     <a href="@Url.Action("UCypherInstafight","work")">
                                         <img src="~/Content/work/images/thums/u-cypher-insta-fight-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>UCYPHER</h4>
                                             <p>Insta Fight</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="@Url.Action("Pow","work")">
-                                        <img src="~/Content/work/images/thums/pow-thum.jpg" alt="">
-                                        <div class="caption">
-                                            <h4>POW-Bandhi Yuddh Ke </h4>
-                                            <p>A first-of-a-kind banner that created true 'shock' value </p>
                                         </div>
                                     </a>
                                 </li>
@@ -999,6 +1017,15 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a href="@Url.Action("Pow","work")">
+                                        <img src="~/Content/work/images/thums/pow-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>POW-Bandhi Yuddh Ke </h4>
+                                            <p>A first-of-a-kind banner that created true 'shock' value </p>
+                                        </div>
+                                    </a>
+                                </li>                               
+                                <li>
                                     <a href="@Url.Action("DancePlus2","work")">
                                         <img src="~/Content/work/images/thums/danceplus-thum.jpg" alt="">
                                         <div class="caption">
@@ -1006,34 +1033,7 @@
                                             <p>Getting the nation to dance to our tune with video innovations and thumbstopping content</p>
                                         </div>
                                     </a>
-                                </li>
-                                <li>
-                                    <a href="@Url.Action("TedGoogleCards","work")">
-                                        <img src="~/Content/work/images/thums/ted-thum.jpg" alt="">
-                                        <div class="caption">
-                                            <h4>TED GOOGLE CARDS</h4>
-                                            <p>Nayi Soch</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="@Url.Action("HSPUBHMedia","work")">
-                                        <img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="">
-                                        <div class="caption">
-                                            <h4>Har Shaakh Pe Ullu Baithaa Hai</h4>
-                                            <p>Kya Ullu Banaya!</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="@Url.Action("TextMoji","work")">
-                                        <img src="~/Content/work/images/thums/textmoji-thum.jpg" alt="">
-                                        <div class="caption">
-                                            <h4>MMF Text Moji</h4>
-                                            <p>Ek Nayi Soch. Ek Nayi Raah.</p>
-                                        </div>
-                                    </a>
-                                </li>
+                                </li>                              
                             </ul>
                         </div>
                         <div class="resp-tab-content" id="Experiences">
@@ -1143,13 +1143,30 @@
                                         </div>
                                     </a>
                                 </li>
-
                                 <li>
                                     <a href="@Url.Action("Ikyawann","work")">
                                         <img src="~/Content/work/images/thums/ikyawann-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>IKYAWANN</h4>
                                             <p>Not a shaadi material</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("HSPubh","work")">
+                                        <img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Har Shaakh Pe Ullu Baithaa Hai</h4>
+                                            <p>Kya Ullu Banaya!</p>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("Kullfi","work")">
+                                        <img src="~/Content/work/images/thums/kullfi-thum.jpg" alt="">
+                                        <div class="caption">
+                                            <h4>Kulfi</h4>
+                                            <p>She sings about anything!</p>
                                         </div>
                                     </a>
                                 </li>
@@ -1225,29 +1242,24 @@
                                         </div>
                                     </a>
                                 </li>
+                              
+                            </ul>
+                        </div>
+                         <div class="resp-tab-content" id="Marketing-Sciences">
+                             
+                             </div>
+                        <div class="resp-tab-content" id="Work-Media">
+                            <ul>
                                 <li>
-                                    <a href="@Url.Action("HSPubh","work")">
-                                        <img src="~/Content/work/images/thums/hsubh-thum.jpg" alt="">
+                                    <a href="@Url.Action("UCypher","work")">
+                                        <img src="~/Content/work/images/thums/ucypher-thum.jpg" alt="">
                                         <div class="caption">
-                                            <h4>Har Shaakh Pe Ullu Baithaa Hai</h4>
-                                            <p>Kya Ullu Banaya!</p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="@Url.Action("Kullfi","work")">
-                                        <img src="~/Content/work/images/thums/kullfi-thum.jpg" alt="">
-                                        <div class="caption">
-                                            <h4>Kulfi</h4>
-                                            <p>She sings about anything!</p>
+                                            <h4>UCYPHER</h4>
+                                            <p>Naya Sport. Naye Superstars.</p>
                                         </div>
                                     </a>
                                 </li>
                             </ul>
-                        </div>
-                         <div class="resp-tab-content" id="Marketing-Sciences">
-                             </div>
-                        <div class="resp-tab-content" id="Work-Media">
                         </div>
                     </div>
                 </div>
